[package]
name = "api"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
axum = { version = "0.6", features = ["http2"] }
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.10"
firestore = "0.31"
log = "0.4"
once_cell = "1"
semver = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7.1"
tokio = { version = "1", features = ["rt", "io-std", "sync"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["cors", "set-header"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
strum = { version = "0.24", features = ["derive"] }
test-log = "0.2"
