[package]
name = "api"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
axum = { version = "0.6", features = ["http2"] }
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.10"
firestore = "0.31"
git-url-parse = "0.4"
graphql_client = "0.12"
log = "0.4"
once_cell = "1"
reqwest = "0.11"
semver = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt", "io-std", "sync"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["cors", "set-header"] }
uuid = { version = "1", features = ["v4", "serde"] }
zip = "0.6"

[dev-dependencies]
serde_test = "1"
strum = { version = "0.24", features = ["derive"] }
test-log = "0.2"
