[package]
name = "api"
version = "0.0.0"
edition = "2021"
publish = false

[features]
default = ["log_request_response"]
log_request_response = []

[dependencies]
axum = { version = "0.6", features = ["http2"] }
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
crc32c = "0.6"
env_logger = "0.10"
firestore = "0.32"
futures = "0.3"
gcloud-sdk = { version = "0.20.1", features = ["google-rest-storage-v1", "rest"] }
git-url-parse = "0.4"
graphql_client = "0.12"
http = "0.2"
hyper = "0.14"
libflate = "1"
log = "0.4"
num-traits = "0.2"
once_cell = "1"
reqwest = "0.11"
semver = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"
thiserror = "1"
tokio = { version = "1", features = ["rt", "io-std", "sync"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["cors", "set-header", "trace"] }
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
walkdir = "2"
zip = "0.6"

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
serde_test = "1"
strum = { version = "0.24", features = ["derive"] }
test-log = "0.2"
